fix some layout issue in work page

--- a/src/04_Variables_And_StyleComponents/Project_Card/Project_Card.scss
+++ b/src/04_Variables_And_StyleComponents/Project_Card/Project_Card.scss
@@ -26,20 +26,20 @@
 }
 .project_card:hover {
   transform: scale(1.01);
-  box-shadow: 0 0 10px #ffffff33;
 }
 
 .project_content {
   position: absolute;
   top: 1rem;
   left: 0;
+  bottom: 0.5rem;
   width: 100%;
-  height: 94%;
+  height: 95%;
   padding: 20px;
   box-sizing: border-box;
   transform: translate(-200%);
   background: #00000090;
-  backdrop-filter: blur(2px);
+  backdrop-filter: blur(3px);
   transform-origin: bottom;
   transition: transform 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.05);
   display: flex;
